--- a/less/navbar.less
+++ b/less/navbar.less
@@ -33,6 +33,9 @@
 .navbar-spacer {
   &.spacer-active {
     height: 50px;
+    &.spacer-tall {
+      height: 355px;
+    }
   }
 }
 
